# hdr-histogram

./: .travis.yml  README  README.md  hdr-histogram.cabal  stack.yaml
bench/: Bench.hs
bench/Data/HdrHistogram/: MutableBench.hs
src/Data/: HdrHistogram.hs
src/Data/HdrHistogram/: Config.hs  Mutable.hs  Tutorial.hs
src/Data/HdrHistogram/Config/: Internal.hs
test/Data/: HdrHistogramSpec.hs
test/Data/HdrHistogram/: ConfigSpec.hs  MutableSpec.hs
test/Test/: Expectations.hs  Utils.hs
